--- a/templates/index.html
+++ b/templates/index.html
@@ -22,17 +22,19 @@
 <div class="container">
     <!-- Jumbotron Header-->
     <header class="jumbotron my-4">
-    <h1 class="display-4">Click a case of functional-programing</h1>
+
+    {% if username %}
+    <h1 class="display-4">Hello {{ username }}</h1>
+    {% else %}
+    <h1 class="display-4">Hello anonymous</h1>
+    {% endif %}
     <p class="lead">
-        This site made to understand how to use django funtional programing.
-        If you have any better idea to share with django beginner, join our github group.
-        
-    </p>
-    <a class="btn btn-primary btn-lg" href="#!">Join the github group</a>
+        User can write note after login.        
+    </p>    
     </header>
     <!-- Page Features-->
     <div class="row text-center">
-        <div class="col-lg-3 col-md-6 mb-4">
+        <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
             <img
                 class="card-img-top"
@@ -44,65 +46,6 @@
                 <p class="card-text">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                 Sapiente esse necessitatibus neque.
-                </p>
-            </div>
-            <div class="card-footer">
-                <a class="btn btn-primary" href="#!">Find Out More!</a>
-            </div>
-            </div>
-        </div>
-        <div class="col-lg-3 col-md-6 mb-4">
-            <div class="card h-100">
-            <img
-                class="card-img-top"
-                src="https://via.placeholder.com/500x325"
-                alt="..."
-            />
-            <div class="card-body">
-                <h4 class="card-title">Card title</h4>
-                <p class="card-text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Explicabo magni sapiente, tempore debitis beatae culpa natus
-                architecto.
-                </p>
-            </div>
-            <div class="card-footer">
-                <a class="btn btn-primary" href="#!">Find Out More!</a>
-            </div>
-            </div>
-        </div>
-        <div class="col-lg-3 col-md-6 mb-4">
-            <div class="card h-100">
-            <img
-                class="card-img-top"
-                src="https://via.placeholder.com/500x325"
-                alt="..."
-            />
-            <div class="card-body">
-                <h4 class="card-title">Card title</h4>
-                <p class="card-text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Sapiente esse necessitatibus neque.
-                </p>
-            </div>
-            <div class="card-footer">
-                <a class="btn btn-primary" href="#!">Find Out More!</a>
-            </div>
-            </div>
-        </div>
-        <div class="col-lg-3 col-md-6 mb-4">
-            <div class="card h-100">
-            <img
-                class="card-img-top"
-                src="https://via.placeholder.com/500x325"
-                alt="..."
-            />
-            <div class="card-body">
-                <h4 class="card-title">Card title</h4>
-                <p class="card-text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Explicabo magni sapiente, tempore debitis beatae culpa natus
-                architecto.
                 </p>
             </div>
             <div class="card-footer">
