--- a/templates/header.html
+++ b/templates/header.html
@@ -17,11 +17,11 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
         <li class="nav-item "><a class="nav-link" href="{% url 'home' %}">Home</a></li>        
-        <li class="nav-item "><a class="nav-link" href="{% url 'login' %}">Login</a></li>
-        <li class="nav-item "><a class="nav-link" href="{% url 'logout' %}">Logout</a></li>
         <li class="nav-item "><a class="nav-link" href="{% url 'register' %}">Register</a></li>
-        <li class="nav-item "><a class="nav-link" href="#!">list</a></li>
-        <li class="nav-item "><a class="nav-link" href="#!">detail</a></li>
+        <li class="nav-item "><a class="nav-link" href="{% url 'login' %}">Login</a></li>
+        <li class="nav-item "><a class="nav-link" href="{% url 'logout' %}">Logout</a></li>        
+        <li class="nav-item "><a class="nav-link" href="{% url 'board_list' %}">list</a></li>        
+        <li class="nav-item "><a class="nav-link" href="{% url 'board_write' %}">write</a></li>       
         </ul>
     </div>
     </div>
