--- a/templates/login.html
+++ b/templates/login.html
@@ -1,99 +1,55 @@
 {% extends "base.html" %} 
-{% load static %}
-{% block main %} 
-<!-- Page Content-->
-<div class="container">
-    <!-- Jumbotron Header-->
-    <header class="jumbotron my-4">
-    <h1 class="display-4">A Warm Welcome!</h1>
-    <p class="lead">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, ipsam,
-        eligendi, in quo sunt possimus non incidunt odit vero aliquid
-        similique quaerat nam nobis illo aspernatur vitae fugiat numquam
-        repellat.
-    </p>
-    <a class="btn btn-primary btn-lg" href="#!">Call to action!</a>
-    </header>
-    <!-- Page Features-->
-    <div class="row text-center">
-    <div class="col-lg-3 col-md-6 mb-4">
-        <div class="card h-100">
-        <img
-            class="card-img-top"
-            src="https://via.placeholder.com/500x325"
-            alt="..."
-        />
-        <div class="card-body">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-            Sapiente esse necessitatibus neque.
-            </p>
+{% load static %} 
+{% block main %}
+<div id="login">
+    <div class="container my-3">
+        <header class="jumbotron my-1">
+            <h1 class="display-4">Login using new user table</h1>
+            <p class="lead">
+                It doesn't use django's user model.
+                Use the created new table by user.            
+            </p>  
+        </header>
+        <div class="text-center text-danger">{{ error }}</div>
+        <br />
+        <h3 class="text-center text-danger">Login</h3>
+        <br />
+        <hr />
+        <div class="col-md-6 mx-auto">
+            <form method="POST" action="{% url 'login' %}">
+                {% csrf_token %} {% for field in form %}
+                <div class="form-group">
+                <label for="{{ field.id_for_label }}" class="text-danger"
+                    >{{ field.label }}</label
+                ><br />
+                <input
+                    type="{{ field.field.widget.input_type }}"
+                    class="form-control"
+                    id="{{ field.id_for_label }}"
+                    placeholder="{{ field.label }}"
+                    name="{{ field.name }}"
+                    class="form-control"
+                />
+                </div>
+                {% if field.errors %}
+                <span class="form-group" style="color: red">{{ field.errors }}</span>
+                {% endif %} {% endfor %}
+                <div class="form-group">
+                <button type="submit" class="form-control btn btn-danger">
+                    Submit
+                </button>
+                </div>
+            </form>
+            <div class="form-group">
+                <button
+                type="button"
+                class="mt-1 form-control btn btn-danger"
+                onclick="{% url 'register' %}"
+                >
+                Register
+                </button>
+            </div>
         </div>
-        <div class="card-footer">
-            <a class="btn btn-primary" href="#!">Find Out More!</a>
-        </div>
-        </div>
-    </div>
-    <div class="col-lg-3 col-md-6 mb-4">
-        <div class="card h-100">
-        <img
-            class="card-img-top"
-            src="https://via.placeholder.com/500x325"
-            alt="..."
-        />
-        <div class="card-body">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-            Explicabo magni sapiente, tempore debitis beatae culpa natus
-            architecto.
-            </p>
-        </div>
-        <div class="card-footer">
-            <a class="btn btn-primary" href="#!">Find Out More!</a>
-        </div>
-        </div>
-    </div>
-    <div class="col-lg-3 col-md-6 mb-4">
-        <div class="card h-100">
-        <img
-            class="card-img-top"
-            src="https://via.placeholder.com/500x325"
-            alt="..."
-        />
-        <div class="card-body">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-            Sapiente esse necessitatibus neque.
-            </p>
-        </div>
-        <div class="card-footer">
-            <a class="btn btn-primary" href="#!">Find Out More!</a>
-        </div>
-        </div>
-    </div>
-    <div class="col-lg-3 col-md-6 mb-4">
-        <div class="card h-100">
-        <img
-            class="card-img-top"
-            src="https://via.placeholder.com/500x325"
-            alt="..."
-        />
-        <div class="card-body">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-            Explicabo magni sapiente, tempore debitis beatae culpa natus
-            architecto.
-            </p>
-        </div>
-        <div class="card-footer">
-            <a class="btn btn-primary" href="#!">Find Out More!</a>
-        </div>
-        </div>
-    </div>
-    </div>
+  </div>
 </div>
 {% endblock %}
