--- a/templates/board_update.html
+++ b/templates/board_update.html
@@ -7,6 +7,7 @@
             A tag has many to many relationship in a board table.
         </p>  
     </header>
+    <div class="text-center text-danger">{{ err_msg }}</div>
     <div class="row">
     <div class="col-12">
         <form method="POST" action="{% url 'board_update' board.id %} ">
@@ -17,8 +18,7 @@
                 <label for="{{ form.contents.id_for_label }}">{{ form.contents.label }}</label>
                 <textarea type="{{ form.contents.form.widget.input_type }}" class="form-control h-25" rows="10" name="{{ form.contents.name }}" placeholder="{{ form.contents.label }}" value="{{ form.contents.value }}">{{ form.contents.value }}</textarea>
                 <label for="{{ form.tags.id_for_label }}">{{ form.tags.label }}</label>
-                <input class="form-control" id="{{ form.tags.id_for_label }}"
-                placeholder="{{ form.tags.label }}" name="{{ form.tags.name }}" value="{{ form.tags.all|join:", " }}"/>{{ form.tags.all }}
+                <input class="form-control" id="{{ form.tags.id_for_label }}" placeholder="{{ form.tags.label }}" name="{{ form.tags.name }}" value="{{ form.tags.value|join:', ' }}"/>
             </div>
             {% if form.title.errors or form.contents.errors %}
             <span style="color: red">{{ form.title.errors }}{{ form.contents.errors }}</span>
