--- a/templates/board_update.html
+++ b/templates/board_update.html
@@ -19,10 +19,15 @@
                 <textarea type="{{ form.contents.form.widget.input_type }}" class="form-control h-25" rows="10" name="{{ form.contents.name }}" placeholder="{{ form.contents.label }}" value="{{ form.contents.value }}">{{ form.contents.value }}</textarea>                
                 <label for="{{ form.tags.id_for_label }}">{{ form.tags.label }}</label>
                 <input class="form-control" id="{{ form.tags.id_for_label }}" placeholder="{{ form.tags.label }}" name="{{ form.tags.name }}" value="{{ form.tags.value|join:', ' }}"/>
+                {% if form.photo %}
                 <label for="{{ form.photo.id_for_label }}">{{ form.photo.label }}</label>
                 <input type="{{ form.photo.field.widget.input_type }}" class="form-control" id="{{ form.photo.id_for_label }}" placeholder="{{ form.photo.label }}" name="{{ form.photo.name }}" value="{{ form.photo.value }}"/>
+                {% else %}
+                <label for="{{ form.photo.id_for_label }}">{{ form.photo.label }}</label>
+                <input type="{{ form.photo.field.widget.input_type }}" class="form-control" id="{{ form.photo.id_for_label }}" placeholder="{{ form.photo.label }}" name="{{ form.photo.name }}" value="{{ form.photo.value }}"/>
+                {% endif %}
                 {% if form.photo %}
-                <img src="{{ form.photo.value.url }}" class="my-2" style="max-width:100%;"/>
+                <img src="{{ form.photo.value.url }}" class="my-2" style="max-width:40%;"/>
                 {% endif %}
             </div>            
             {% if form.title.errors or form.contents.errors %}
