--- a/templates/login.html
+++ b/templates/login.html
@@ -11,6 +11,14 @@
             </p>  
         </header>
         <div class="text-center text-danger">{{ error }}</div>
+        <div class="text-center text-danger">
+        {% if messages %}
+            {% for message in messages %}
+                {{ message.tags }}
+                {{ message.message }}
+            {% endfor %}
+        {% endif %}
+        </div>
         <br />
         <h3 class="text-center text-danger">Login</h3>
         <br />
