--- a/templates/board_list.html
+++ b/templates/board_list.html
@@ -15,6 +15,7 @@
                 <tr>
                 <th>#</th>
                 <th>제목</th>
+                <th>좋아요</th>
                 <th>아이디</th>
                 <th>일시</th>
                 </tr>
@@ -24,6 +25,7 @@
                 <tr onclick="location.href='/board/detail/{{ board.id }}/'">
                 <th>{{ board.id }}</th>
                 <td>{{ board.title }}</td>
+                <td>{{ board.like_count }}</td>
                 <td>{{ board.writer }}</td>
                 <td>{{ board.registered_dttm }}</td>
                 </tr>
