--- a/templates/index.html
+++ b/templates/index.html
@@ -34,25 +34,35 @@
     </header>
     <!-- Page Features-->
     <div class="row text-center">
-        <div class="col-lg-4 col-md-6 mb-4">
+        {% for board in boards %}
+        <div class="col-lg-4 col-md-6 mb-4">            
             <div class="card h-100">
-            <img
-                class="card-img-top"
-                src="https://via.placeholder.com/500x325"
-                alt="..."
-            />
-            <div class="card-body">
-                <h4 class="card-title">Card title</h4>
-                <p class="card-text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Sapiente esse necessitatibus neque.
-                </p>
-            </div>
-            <div class="card-footer">
-                <a class="btn btn-primary" href="#!">Detail More!</a>
-            </div>
-            </div>
+                {% if board.photo_thumbnail %}       
+                <img
+                    class="card-img-top"                
+                    src="{{ board.photo_thumbnail.url }}"
+                    alt="{{ board.title }}"
+                />
+                {% else %}
+                <img
+                    class="card-img-top"                
+                    src="{{ board.photo.url }}" 
+                    alt="{{ board.title}} "
+                />
+                {% endif %}
+                <div class="card-body">
+                    <h5 class="card-title">{{ board.title|truncatechars:20 }}</h5>
+                    <p class="card-text">
+                    {{ board.contents|truncatechars:20 }}
+                    </p>
+                </div>
+                <div class="card-footer">
+                    <p >{{ board.like_count }}명이 좋아합니다.</p>
+                    <a class="btn btn-primary" href="/board/detail/{{ board.id }}/">Detail More!</a>
+                </div>
+            </div>            
         </div>
+        {% endfor %}
     </div>
 </div>
 {% endblock %}
